chore: attempt to fix 'cucumber' task